Coping native libs in maven task